<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:orientation="vertical" >

     <Button
         android:id="@+id/button7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/button5"
         android:layout_marginTop="46dp"
         android:text="@string/Boton7" />

     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button7"
         android:layout_below="@+id/button7"
         android:layout_marginTop="38dp"
         android:text="@string/Boton6" />

     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/button6"
         android:layout_marginLeft="72dp"
         android:layout_marginTop="57dp"
         android:text="@string/Boton5" />

</RelativeLayout>  

