<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <EditText
            android:id="@+id/nombre_receta"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/HINTReceta" />
               

        <ImageView
            android:id="@+id/ivimareceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre_receta"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivimareceta"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                     >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" 
                        android:orientation="vertical"
                        android:padding="10dp">
                        
                       
                       <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/categoria"
            			   android:textAppearance="?android:attr/textAppearanceMedium" />
                        <Spinner
       						android:id="@+id/spinnercat"
      						android:layout_width="wrap_content"
        					android:layout_height="55dp"
        					android:layout_marginTop="16dp" />

                        
                      
                        <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/tiempo"
            			   android:textAppearance="?android:attr/textAppearanceMedium"/>
                        
                       
                        <TimePicker
                            android:id="@+id/timePicker1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                       
                                                 
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp" >
                       
                        <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/Boton1"
            			   android:textAppearance="?android:attr/textAppearanceMedium"/>
                        
                        <EditText 
                            android:id="@+id/busqueda"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"  
                            android:hint="@string/Buscar_ingred"
                            />
                        
                         <ImageButton
                            android:id="@+id/imageButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="buscar"
                            android:src="@drawable/abc_ic_search_api_holo_light" />
                         
                        <ListView
					        android:id="@+id/lv3"
					        android:layout_width="match_parent"
					        android:layout_height="match_parent" >
					    </ListView>
                         
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" 
                        android:orientation="vertical"
                        android:padding="10dp">
                        
                        <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/preparacion"
            			   android:textAppearance="?android:attr/textAppearanceMedium" />
                        <EditText
                           android:id="@+id/preparacion"
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:hint="@string/HINTprep"
            			   android:textAppearance="?android:attr/textAppearanceMedium" />
            			   
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

        

    </RelativeLayout>

</ScrollView>
