<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <TextView
            android:id="@+id/tvtit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/ivimareceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvtit"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivimareceta"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" 
                        android:orientation="vertical">
                        
                       <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/receta"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >
                       
                        <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/Boton1"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" 
                        android:orientation="vertical">
                        
                        <TextView 
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:text="@string/preparacion"
            			   android:textAppearance="?android:attr/textAppearanceLarge" />
                        <TextView 
                           android:id="@+id/tvpreparacion"
                           android:layout_width="fill_parent"
            			   android:layout_height="wrap_content"
            			   android:textAppearance="?android:attr/textAppearanceMedium" />
            			   
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>

        

    </RelativeLayout>

</ScrollView>